--- a/src/components/WhyUs/style.scss
+++ b/src/components/WhyUs/style.scss
@@ -71,7 +71,7 @@
     }
 }
 
-@media (min-width: 700px) and (min-aspect-ratio: 16 / 10) and (max-aspect-ratio: 20 / 10) {
+@media (min-width: 700px) and (min-aspect-ratio: 16 / 10) and (max-aspect-ratio: 24 / 10) {
     .whyUs .whyUs__spinner {
         display: none;
     }
