--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -4,7 +4,7 @@
 
 body {
     font-family: "Uni", Arial, Helvetica, sans-serif;
-    overflow-y: scroll;
+    overflow-y: auto;
     scroll-behavior: smooth;
     background-color: $RosemeryDark;
 
